--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,20 @@ h1 {
     margin-top: 20px;
 }
 
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .section {
     border: 1px solid black;
     padding: 20px;
     margin: 10px;
     background-color: #f2f2f2;
     position: relative;
+    flex: 1 1 30%;
+    max-width: 30%;
 }
 
 .section-title {
@@ -43,33 +51,18 @@ h1 {
     background-color: #f1c40f;
 }
 
-/* Desktop styles */
-@media (min-width: 992px) {
-    .section {
-        float: left;
-        width: 32%;
-    }
-}
-
 /* Tablet styles */
-@media (min-width: 768px) and (max-width: 991px) {
-    .chicken, .beef {
-        width: 48%;
-        float: left;
-    }
-
-    .sushi {
-        width: 98%;
-        float: left;
-        clear: both;
+@media (max-width: 991px) {
+    .section {
+        flex: 1 1 45%;
+        max-width: 45%;
     }
 }
 
 /* Mobile styles */
 @media (max-width: 767px) {
     .section {
-        width: 98%;
-        float: none;
-        clear: both;
+        flex: 1 1 98%;
+        max-width: 98%;
     }
 }
